==> novitai/LiPow-Firmware/Src/bq25703a_regulator.c <==
#include "adc_interface.h"
#include "bq25703a_regulator.h"
#include "battery.h"
#include "error.h"
#include "main.h"
#include "string.h"
#include "printf.h"
#include "usbpd.h"
#define cmdMAX_MUTEX_WAIT	pdMS_TO_TICKS( 300 )

void I2C_Write_Register(uint8_t addr_to_write, uint8_t *pData) {
	uint8_t data[2];
	data[0] = addr_to_write;
	data[1] = *pData;
	I2C_Transfer(data, 2);
}

void I2C_Write_Two_Byte_Register(uint8_t addr_to_write, uint8_t lsb_data, uint8_t msb_data) {

	uint8_t data[3];
	data[0] = addr_to_write;
	data[1] = lsb_data;
	data[2] = msb_data;

	I2C_Transfer(data, 3);
}

void I2C_Read_Register(uint8_t addr_to_read, uint8_t *pData, uint16_t size) {
		I2C_Transfer((uint8_t *)&addr_to_read, 1);
		I2C_Receive(pData, size);
}

uint8_t Read_Charge_Okay() {
	return HAL_GPIO_ReadPin(CHRG_OK_GPIO_Port, CHRG_OK_Pin);
}

void Regulator_HI_Z(uint8_t hi_z_en) {
	if (hi_z_en == 1) {
		HAL_GPIO_WritePin(ILIM_HIZ_GPIO_Port, ILIM_HIZ_Pin, GPIO_PIN_RESET);
	}
	else {
		HAL_GPIO_WritePin(ILIM_HIZ_GPIO_Port, ILIM_HIZ_Pin, GPIO_PIN_SET);
	}
}

void Regulator_OTG_EN(uint8_t otg_en) {
	if (otg_en == 0) {
		HAL_GPIO_WritePin(EN_OTG_GPIO_Port, EN_OTG_Pin, GPIO_PIN_RESET);
	}
	else {
		HAL_GPIO_WritePin(EN_OTG_GPIO_Port, EN_OTG_Pin, GPIO_PIN_SET);
	}
}

void Control_Charger_Output() {

	TickType_t xDelay = 500 / portTICK_PERIOD_MS;

	// Charging for USB PD enabled supplies
	if ((Get_XT60_Connection_State() == CONNECTED) && (Get_Balance_Connection_State() == CONNECTED) && (Get_Error_State() == 0) && (Get_Input_Power_Ready() == READY) && (Get_Cell_Over_Voltage_State() == 0)) {

		// XT60 connected, balance lead connected, no error, input PD power ready, no cell over voltage

		Set_Charge_Voltage(Get_Number_Of_Cells());

		uint32_t charging_current_ma = ((Calculate_Max_Charge_Power()) / (float)(Get_Battery_Voltage() / BATTERY_ADC_MULTIPLIER));

		Set_Charge_Current(charging_current_ma);

		Regulator_HI_Z(0);

		// Check if XT60 was disconnected
		if (regulator.vbat_voltage > (BATTERY_DISCONNECT_THRESH * Get_Number_Of_Cells())) {
			Regulator_HI_Z(1);
			vTaskDelay(xDelay*2);
			Regulator_HI_Z(0);
		}
	}
	// Case to handle non USB PD supplies. Limited to 5V 500mA.
	else if ((Get_XT60_Connection_State() == CONNECTED) && (Get_Balance_Connection_State() == CONNECTED) && (Get_Error_State() == 0) && (Get_Input_Power_Ready() == NO_USB_PD_SUPPLY) && (Get_Cell_Over_Voltage_State() == 0)) {

		// XT60 connected, balance lead connected, no error, power not PD, no cell over voltage

		Set_Charge_Voltage(Get_Number_Of_Cells());

		uint32_t charging_current_ma = ((NON_USB_PD_CHARGE_POWER * ASSUME_EFFICIENCY) / (Get_Battery_Voltage() / BATTERY_ADC_MULTIPLIER));

		Set_Charge_Current(charging_current_ma);

		Regulator_HI_Z(0);

	}
	else {

		// Charge conditions not met, turn charge output off

		Regulator_HI_Z(1);
		Set_Charge_Voltage(0);
		Set_Charge_Current(0);
	}
}
