==> xusousou/balance_charger/HARDWORK/bq25703a_regulator.c <==
#include "bq25703a_regulator.h"
#include "iic.h"

void I2C_Read_Register(uint16_t ReadAddr,uint8_t data[],uint8_t len)	
{
    uint8_t i=0;
	i2c_start();
	i2c_send_byte(BQ26703A_I2C_ADDRESS);
	i2c_wait_ack();
	i2c_send_byte(ReadAddr);
	i2c_wait_ack();
	i2c_start();
	i2c_send_byte(BQ26703A_I2C_ADDRESS+1);
	i2c_wait_ack();

    for(i=0; i<len; i++)
    {
        data[i] = i2c_read_byte();
        i2c_ack();
    }
    data[i++] = i2c_read_byte();

    i2c_nack();
    i2c_stop();
    softDelayUs(10);
}

void I2C_Write_Register(uint16_t WriteAddr,uint8_t *DataToWrite)
{
	i2c_start();
	i2c_send_byte(BQ26703A_I2C_ADDRESS);
	i2c_wait_ack();
	i2c_send_byte(WriteAddr);
	i2c_wait_ack();
	i2c_send_byte(*DataToWrite);
	i2c_wait_ack();
	i2c_stop();
    softDelayUs(10);
}

void I2C_Write_Two_Byte_Register(uint8_t WriteAddr, uint8_t lsb_data, uint8_t msb_data)		
{
	i2c_start();
	i2c_send_byte(BQ26703A_I2C_ADDRESS);
	i2c_wait_ack();
	i2c_send_byte(WriteAddr);
	i2c_wait_ack();
	i2c_send_byte(lsb_data);
	i2c_wait_ack();
	i2c_send_byte(msb_data);
	i2c_wait_ack();
	i2c_stop();
    softDelayUs(10);
}

uint8_t Read_Charge_Okay() {
	return gpio_input_bit_get(CHRG_OK_PORT, CHRG_OK_PIN);
}

void Regulator_HI_Z(uint8_t hi_z_en) {
	if (hi_z_en == 1) {
		gpio_bit_reset(ILIM_HIZ_PORT, ILIM_HIZ_PIN);
	}
	else {
		gpio_bit_set(ILIM_HIZ_PORT, ILIM_HIZ_PIN);
	}
}

void Regulator_OTG_EN(uint8_t otg_en) {
	if (otg_en == 0) {
		gpio_bit_reset(EN_OTG_PORT, EN_OTG_PIN);
	}
	else {
		gpio_bit_set(EN_OTG_PORT, EN_OTG_PIN);
	}
}

void Control_Charger_Output(float vol, uint8_t CELL)
{
    uint8_t cell_Num;
    uint32_t cell_CUR;
    float  CUR_value, CUR_min, CUR_max,vol_min,vol_max;
    cell_Num =CELL;
    vol_max=cell_Num*4.215;
    vol_min=cell_Num*1;
    CUR_min=128;
    //充电电流上限。2S-3A；3S-4.5A；4S-4A
    if(cell_Num==4){
        CUR_max=4500;
    }else if(cell_Num==3){
        CUR_max=4500;
    }else if(cell_Num==2){
        CUR_max=3000;
    }else CUR_max=0;
   
    Balance_Connection_State();

    //充电电流调整,平均电芯电压在1V-3V以最大电流的1/5进行充电；在3V-4V以最大电流充电；在4V-4.18V充电电流逐渐变小；在4.18V-4.215V电流为64mA
    if(vol>4.0*cell_Num && vol<=(vol_max-(0.02*cell_Num)) && cell_Num>1){
        cell_CUR= ((4.0*cell_Num)-vol) * ((CUR_max-CUR_min)/((vol_max-(0.02*cell_Num))-(4.0*cell_Num))) + CUR_max + 2*CUR_min;
    }else if(vol>(vol_max-(0.02*cell_Num)) && vol<=vol_max && cell_Num>1){
        cell_CUR = CUR_min;
    }else if(vol>3.0*cell_Num && vol<=4.0*cell_Num  && cell_Num>1){
        cell_CUR = (60/vol*1000);
        if(cell_CUR > CUR_max ) cell_CUR = CUR_max;  
    }else if(vol>vol_min && vol<=3.0*cell_Num  && cell_Num>1){
        cell_CUR= CUR_max/5;
    }else{
        cell_CUR = 0;
    }
    //电流限幅
     if(cell_CUR>3000){
        cell_CUR=3000;
    }else if(cell_CUR<=0){
        cell_CUR=0;
    }

    if(cell_Num>1 && Get_Error_State() == 0 && 
		battery_state.cell_over_voltage == 0 && Get_Requires_Charging_State() == 1 && 
		battery_state.balancing_enabled == 0 && charger_flag == 1){
        Set_Charge_Voltage(cell_Num);
        Set_Charge_Current(cell_CUR);
        Regulator_HI_Z(0);
    }else if(battery_state.cell_over_voltage == 0 && battery_state.balancing_enabled == 1 && cell_Num>1){
        Set_Charge_Voltage(cell_Num);
        Set_Charge_Current(CUR_min);
        Regulator_HI_Z(0);
    }else{
        Set_Charge_Voltage(0);
        Set_Charge_Current(0);
        Regulator_HI_Z(1);
    }
}
